rabbitmq/kubernetes/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - port: 15672
      targetPort: 15672
      name: http
      protocol: TCP
    - port: 5672
      targetPort: 5672
      name: amqp
      protocol: TCP
