rabbitmq/kubernetes/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
spec:
  rules:
    - host: rabbitmq-manager.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: rabbitmq-service
                port:
                  number: 15672
#####################################################################################

# Enable ingress in Minikube to tunnel localhost to the Kubernetes cluster
# $ minikube addons enable ingress
# $ minikube tunnel

# Map localhost to mp3converter.com in local computer
# $ sudo nano /etc/hosts
# Add the following line: 127.0.0.1 rabbitmq-manager.com

#####################################################################################
